--- a/core/templates/partials/header.html
+++ b/core/templates/partials/header.html
@@ -9,7 +9,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <link rel="icon" href="{% static 'img/favicon.png' %}" type="image/png" />
-  <title>Eiser ecommerce</title>
+  <title>Eiser ecommerce|Template</title>
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}" />
   <link rel="stylesheet" href="{% static 'vendors/linericon/style.css' %}" />
@@ -101,17 +101,10 @@
                       </li>
                     </ul>
                   </li>
-                  <li class="nav-item submenu dropdown">
-                    <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-                      aria-expanded="false">Blog</a>
-                    <ul class="dropdown-menu">
-                      <li class="nav-item">
-                        <a class="nav-link" href="{% url 'blog' %}">Blog</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="{% url 'blogdetails' %}">Blog Details</a>
-                      </li>
-                    </ul>
+                  <li class="nav-item">
+                    <a class="nav-link" href="{% url 'blog' %}">Blog</a>
+                  </li>
+                   
                   </li>
                   <li class="nav-item submenu dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
