--- a/core/templates/single-blog.html
+++ b/core/templates/single-blog.html
@@ -2,6 +2,9 @@
 {% load static%}
 (% load i18n %)
 {% block content%}
+{% block title %}
+{{ title }}
+{% endblock %}
 
     <!--================Home Banner Area =================-->
     <section class="banner_area">
@@ -32,21 +35,16 @@
 							<div class="col-lg-8 posts-list">
 									<div class="single-post">
 													<div class="feature-img">
-															<img class="img-fluid" src="img/blog/main-blog/m-blog-1.jpg" alt="">
+															<img class="img-fluid" src="{% static 'img/blog/main-blog/m-blog-1.jpg' %}" alt="">
 													</div>
 											<div class="blog_details">
-													<h2>Second divided from form fish beast made every of seas
-                              all gathered us saying he our</h2>
+													<h2>{{ blog.title }}</h2>
                           <ul class="blog-info-link mt-3 mb-4">
                               <li><a href="#"><i class="ti-user"></i> Travel, Lifestyle</a></li>
                               <li><a href="#"><i class="ti-comments"></i> 03 Comments</a></li>
                             </ul>
 													<p class="excert">
-														MCSE boot camps have its supporters and its detractors. Some people do not understand why you should have to spend money on boot camp when you can get the MCSE study materials yourself at a fraction of the camp price. However, who has the willpower
-
-													</p>
-													<p>
-															MCSE boot camps have its supporters and its detractors. Some people do not understand why you should have to spend money on boot camp when you can get the MCSE study materials yourself at a fraction of the camp price. However, who has the willpower to actually sit through a self-imposed MCSE training. who has the willpower to actually 
+														{{ blog.description }}
                           </p>
                           <div class="quote-wrapper">
                             <div class="quotes">
@@ -83,7 +81,7 @@
                             <div class="col-lg-6 col-md-6 col-12 nav-left flex-row d-flex justify-content-start align-items-center">
                                 <div class="thumb">
                                     <a href="#">
-                                        <img class="img-fluid" src="img/blog/prev.jpg" alt="">
+                                        <img class="img-fluid" src="{% static 'img/blog/prev.jpg' %}" alt="">
                                     </a>
                                 </div>
                                 <div class="arrow">
@@ -112,7 +110,7 @@
                                 </div>
                                 <div class="thumb">
                                     <a href="#">
-                                        <img class="img-fluid" src="img/blog/next.jpg" alt="">
+                                        <img class="img-fluid" src="{% static 'img/blog/next.jpg' %}" alt="">
                                     </a>
                                 </div>
                             </div>
@@ -123,7 +121,7 @@
                   
                   <div class="blog-author">
                     <div class="media align-items-center">
-                      <img src="img/blog/author.png" alt="">
+                      <img src="{% static 'img/blog/author.png' %}" alt="">
                       <div class="media-body">
                         <a href="#">
                           <h4>Harvard milan</h4>
@@ -139,7 +137,7 @@
                         <div class="single-comment justify-content-between d-flex">
                           <div class="user justify-content-between d-flex">
                               <div class="thumb">
-                                  <img src="img/blog/c1.png" alt="">
+                                  <img src="{% static 'img/blog/c1.png' %}" alt="">
                               </div>
                               <div class="desc">
                                   <p class="comment">
@@ -167,7 +165,7 @@
                           <div class="single-comment justify-content-between d-flex">
                               <div class="user justify-content-between d-flex">
                                   <div class="thumb">
-                                      <img src="img/blog/c2.png" alt="">
+                                      <img src="{% static 'img/blog/c2.png' %}" alt="">
                                   </div>
                                   <div class="desc">
                                       <p class="comment">
@@ -195,7 +193,7 @@
                           <div class="single-comment justify-content-between d-flex">
                               <div class="user justify-content-between d-flex">
                                   <div class="thumb">
-                                      <img src="img/blog/c3.png" alt="">
+                                      <img src="{% static 'img/blog/c3.png' %}" alt="">
                                   </div>
                                   <div class="desc">
                                       <p class="comment">
@@ -312,7 +310,7 @@
                       <aside class="single_sidebar_widget popular_post_widget">
                           <h3 class="widget_title">Recent Post</h3>
                           <div class="media post_item">
-                              <img src="img/blog/popular-post/post1.jpg" alt="post">
+                              <img src="{% static 'img/blog/popular-post/post1.jpg' %}" alt="post">
                               <div class="media-body">
                                   <a href="single-blog.html">
                                       <h3>From life was you fish...</h3>
@@ -321,7 +319,7 @@
                               </div>
                           </div>
                           <div class="media post_item">
-                              <img src="img/blog/popular-post/post2.jpg" alt="post">                              
+                              <img src="{% static 'img/blog/popular-post/post2.jpg' %}" alt="post">                              
                               <div class="media-body">
                                   <a href="single-blog.html">
                                       <h3>The Amazing Hubble</h3>
@@ -330,7 +328,7 @@
                               </div>
                           </div>
                           <div class="media post_item">
-                              <img src="img/blog/popular-post/post3.jpg" alt="post">                              
+                              <img src="{% static 'img/blog/popular-post/post3.jpg' %}" alt="post">                              
                               <div class="media-body">
                                   <a href="single-blog.html">
                                       <h3>Astronomy Or Astrology</h3>
@@ -339,7 +337,7 @@
                               </div>
                           </div>
                           <div class="media post_item">
-                              <img src="img/blog/popular-post/post4.jpg" alt="post">
+                              <img src="{% static 'img/blog/popular-post/post4.jpg' %}" alt="post">
                               <div class="media-body">
                                   <a href="single-blog.html">
                                       <h3>Asteroids telescope</h3>
@@ -384,32 +382,32 @@
                         <ul class="instagram_row flex-wrap">
                             <li>
                                 <a href="#">
-                                  <img class="img-fluid" src="img/instagram/widget-i1.png" alt="">
+                                  <img class="img-fluid" src="{% static 'img/instagram/widget-i1.png' %}" alt="">
                                 </a>
                             </li>
                             <li>
                                 <a href="#">
-                                  <img class="img-fluid" src="img/instagram/widget-i2.png" alt="">
+                                  <img class="img-fluid" src="{% static 'img/instagram/widget-i2.png' %}" alt="">
                                 </a>
                             </li>
                             <li>
                                 <a href="#">
-                                  <img class="img-fluid" src="img/instagram/widget-i3.png" alt="">
+                                  <img class="img-fluid" src="{% static 'img/instagram/widget-i3.png' %}" alt="">
                                 </a>
                             </li>
                             <li>
                                 <a href="#">
-                                  <img class="img-fluid" src="img/instagram/widget-i4.png" alt="">
+                                  <img class="img-fluid" src="{% static 'img/instagram/widget-i4.png' %}" alt="">
                                 </a>
                             </li>
                             <li>
                                 <a href="#">
-                                  <img class="img-fluid" src="img/instagram/widget-i5.png" alt="">
+                                  <img class="img-fluid" src="{% static 'img/instagram/widget-i5.png' %}" alt="">
                                 </a>
                             </li>
                             <li>
                                 <a href="#">
-                                  <img class="img-fluid" src="img/instagram/widget-i6.png" alt="">
+                                  <img class="img-fluid" src="{% static 'img/instagram/widget-i6.png' %}" alt="">
                                 </a>
                             </li>
                         </ul>
