--- a/core/templates/contact.html
+++ b/core/templates/contact.html
@@ -63,13 +63,51 @@
           <h2 class="contact-title">Get in Touch</h2>
         </div>
         <div class="col-lg-8 mb-4 mb-lg-0">
-          <form class="form-contact contact_form" action="contact_process.php" method="post" id="contactForm" novalidate="novalidate">
-            <div class="row">
-              <div class="col-12">
-                <div class="form-group">
-                    <textarea class="form-control w-100" name="message" id="message" cols="30" rows="9" placeholder="Enter Message"></textarea>
+          <form class="form-contact contact_form" method="post" id="contactForm" novalidate="novalidate">
+            
+  {% csrf_token %}
+  <div class="row">
+    <div class="col-12">
+      <div class="form-group">
+        {{ contact_form.message }}
+
+        <!-- {{ contact_form.message.errors }}
+        <textarea class="form-control w-100" name="message" id="message" cols="30" rows="9" placeholder="Enter Message">{{ contact_form.message.value }}</textarea> -->
+      </div>
+    </div>
+    <div class="col-sm-6">
+      <div class="form-group">
+        {{ contact_form.name }}
+        <!-- {{ contact_form.name.errors }}
+        <input class="form-control" name="name" id="name" type="text" placeholder="Enter your name" value="{{ contact_form.name.value }}"> -->
+      </div>
+    </div>
+    <div class="col-sm-6">
+      <div class="form-group">
+        {{ contact_form.email }}
+        <!-- <input class="form-control" name="email" id="email" type="email" placeholder="Enter email address" value="{{ contact_form.email.value }}"> -->
+      </div>
+    </div>
+    <div class="col-12">
+      <div class="form-group">
+        {{ contact_form.subject }}
+        <!-- <input class="form-control" name="subject" id="subject" type="text" placeholder="Enter Subject" value="{{ contact_form.subject.value }}"> -->
+      </div>
+    </div>
+  </div>
+  <div class="form-group mt-lg-3">
+    <button type="submit" class="main_btn">Send Message</button>
+  </div>
+</form>
+
+          <!-- <form class="form-contact contact_form" action="contact_process.php" method="post" id="contactForm" novalidate="novalidate">
+            <div class="row"> 
+                   <div class="col-12"> 
+                
+                 <div class="form-group">
+                    <textarea class="form-control w-100" name="message" id="message" cols="30" rows="9" placeholder="Enter Message" ></textarea>
                 </div>
-              </div>
+              </div> 
               <div class="col-sm-6">
                 <div class="form-group">
                   <input class="form-control" name="name" id="name" type="text" placeholder="Enter your name">
@@ -83,13 +121,13 @@
               <div class="col-12">
                 <div class="form-group">
                   <input class="form-control" name="subject" id="subject" type="text" placeholder="Enter Subject">
-                </div>
+                </div> 
               </div>
             </div>
-            <div class="form-group mt-lg-3">
-              <button type="submit" class="main_btn">Send Message</button>
-            </div>
-          </form>
+            <div class="form-group mt-lg-3">  
+              <button type="submit" class="main_btn">Send Message</button> 
+              </div>  
+          </form>  -->
 
           {% for contact in contacts %}
         </div>
@@ -120,6 +158,6 @@
       </div>
     </div>
   </section>
-	<!-- ================ contact section end ================= -->
+	<!-- ================ contact section end =================
 
-  {% endblock %}
+  {% endblock %} -->
