--- a/core/templates/category.html
+++ b/core/templates/category.html
@@ -2,6 +2,9 @@
 {% load static%}
 (% load i18n %)
 {% block content%}
+{% block title %}
+{{ title }}
+{% endblock %}
 
     <!--================Home Banner Area =================-->
     <section class="banner_area">
@@ -45,12 +48,47 @@
             
             <div class="latest_product_inner">
               <div class="row">
+                {% for category in categories %}
                 <div class="col-lg-4 col-md-6">
                   <div class="single-product">
                     <div class="product-img">
                       <img
                         class="card-img"
-                        src="img/product/inspired-product/i1.jpg"
+                        src="{{ category.image.url }}"
+                        alt=""
+                      />
+                      <div class="p_icon">
+                        <a href="#">
+                          <i class="ti-eye"></i>
+                        </a>
+                        <a href="#">
+                          <i class="ti-heart"></i>
+                        </a>
+                        <a href="#">
+                          <i class="ti-shopping-cart"></i>
+                        </a>
+                      </div>
+                    </div>
+                    <div class="product-btm">
+                      <a href="#" class="d-block">
+                        <h4>{{ category.name }}</h4>
+                      </a>
+                      <div class="mt-3">
+                        <span class="mr-4">${{ category.price }}</span>
+                        <!-- <del>$35.00</del> -->
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                {% endfor %}
+               
+
+                 <!-- <div class="col-lg-4 col-md-6"> 
+                  <div class="single-product">
+                    <div class="product-img">
+                      <img
+                        class="card-img"
+                        src="{% static 'img/product/inspired-product/i2.jpg' %}"
                         alt=""
                       />
                       <div class="p_icon">
@@ -82,7 +120,7 @@
                     <div class="product-img">
                       <img
                         class="card-img"
-                        src="img/product/inspired-product/i2.jpg"
+                        src="{% static 'img/product/inspired-product/i3.jpg' %}"
                         alt=""
                       />
                       <div class="p_icon">
@@ -114,7 +152,7 @@
                     <div class="product-img">
                       <img
                         class="card-img"
-                        src="img/product/inspired-product/i3.jpg"
+                        src="{% static 'img/product/inspired-product/i4.jpg' %}"
                         alt=""
                       />
                       <div class="p_icon">
@@ -146,7 +184,7 @@
                     <div class="product-img">
                       <img
                         class="card-img"
-                        src="img/product/inspired-product/i4.jpg"
+                        src="{% static 'img/product/inspired-product/i5.jpg' %}"
                         alt=""
                       />
                       <div class="p_icon">
@@ -178,7 +216,7 @@
                     <div class="product-img">
                       <img
                         class="card-img"
-                        src="img/product/inspired-product/i5.jpg"
+                        src="{% static 'img/product/inspired-product/i6.jpg' %}"
                         alt=""
                       />
                       <div class="p_icon">
@@ -210,7 +248,7 @@
                     <div class="product-img">
                       <img
                         class="card-img"
-                        src="img/product/inspired-product/i6.jpg"
+                        src="{% static 'img/product/inspired-product/i7.jpg' %}"
                         alt=""
                       />
                       <div class="p_icon">
@@ -242,7 +280,7 @@
                     <div class="product-img">
                       <img
                         class="card-img"
-                        src="img/product/inspired-product/i7.jpg"
+                        src="{% static 'img/product/inspired-product/i8.jpg' %}"
                         alt=""
                       />
                       <div class="p_icon">
@@ -274,7 +312,7 @@
                     <div class="product-img">
                       <img
                         class="card-img"
-                        src="img/product/inspired-product/i8.jpg"
+                        src="{% static 'img/product/inspired-product/i2.jpg' %}"
                         alt=""
                       />
                       <div class="p_icon">
@@ -299,42 +337,12 @@
                       </div>
                     </div>
                   </div>
-                </div>
-
-                <div class="col-lg-4 col-md-6">
-                  <div class="single-product">
-                    <div class="product-img">
-                      <img
-                        class="card-img"
-                        src="img/product/inspired-product/i2.jpg"
-                        alt=""
-                      />
-                      <div class="p_icon">
-                        <a href="#">
-                          <i class="ti-eye"></i>
-                        </a>
-                        <a href="#">
-                          <i class="ti-heart"></i>
-                        </a>
-                        <a href="#">
-                          <i class="ti-shopping-cart"></i>
-                        </a>
-                      </div>
-                    </div>
-                    <div class="product-btm">
-                      <a href="#" class="d-block">
-                        <h4>Latest men’s sneaker</h4>
-                      </a>
-                      <div class="mt-3">
-                        <span class="mr-4">$25.00</span>
-                        <del>$35.00</del>
-                      </div>
-                    </div>
-                  </div>
-                </div>
+                </div>-->
+                
               </div>
+              
             </div>
-          </div>
+          </div>  
 
           <div class="col-lg-3">
             <div class="left_sidebar_area">
