--- a/core/templates/contact.html
+++ b/core/templates/contact.html
@@ -90,7 +90,8 @@
     </div>
     <div class="col-12">
       <div class="form-group">
-        {{ contact_form.subject }}
+       {{ contact_form.subject }}
+        
         <!-- <input class="form-control" name="subject" id="subject" type="text" placeholder="Enter Subject" value="{{ contact_form.subject.value }}"> -->
       </div>
     </div>
@@ -157,7 +158,12 @@
         </div>
       </div>
     </div>
+    
   </section>
-	<!-- ================ contact section end =================
+ 
+  
+  
+	 <!-- ================ contact section end =================  -->
 
-  {% endblock %} -->
+  {% endblock %} 
+  
