--- a/core/templates/blog.html
+++ b/core/templates/blog.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static%}
 {% load custom_filter %}
-(% load i18n %)
+{% load i18n %}
 {% block content%}
 {% block title %}
   {{ title }}
