--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -1,6 +1,6 @@
 {% extends 'base.html'%}
 {% load static %}
-(% load i18n %)
+{% load i18n %}
 
 {% block content %}
 
@@ -39,9 +39,9 @@
           <div class="single-feature">
             <a href="#" class="title">
               <i class="flaticon-truck"></i>
-              <h3>Free Delivery</h3>
+              <h3>{% trans 'Free Delivery' %}</h3>
             </a>
-            <p>Shall open divide a one</p>
+            <p>{% trans 'Shall open divide a one' %}</p>
           </div>
         </div>
 
@@ -49,7 +49,7 @@
           <div class="single-feature">
             <a href="#" class="title">
               <i class="flaticon-support"></i>
-              <h3>Alway support</h3>
+              <h3>{% trans 'Alway support' %}</h3>
             </a>
             <p>Shall open divide a one</p>
           </div>
@@ -75,7 +75,7 @@
       <div class="row justify-content-center">
         <div class="col-lg-12">
           <div class="main_title">
-            <h2><span>Featured product</span></h2>
+            <h2><span>{% trans 'Featured product' %}</span></h2>
             <p>Bring called seed first of third give itself now ment</p>
           </div>
         </div>
@@ -602,8 +602,8 @@
               </a>
               <div class="text-wrap">
                 <p>
-                  Let one fifth i bring fly to divided face for bearing the divide unto seed winged divided light
-                  Forth.
+                  "{% trans 'Let one fifth i bring fly to divided face for bearing the divide unto seed winged divided light
+                  Forth.' %}"
                 </p>
               </div>
               <a href="#" class="blog_btn">Learn More <span class="ml-2 ti-arrow-right"></span></a>
