--- a/user/templates/register.html
+++ b/user/templates/register.html
@@ -5,12 +5,7 @@
 
 {% block content %}
 <style>
-    body {
-        background-image: url('{% static 'background.jpg' %}');
-        background-size: cover;
-        font-family: Arial, sans-serif;
-        color: #333;
-    }
+  
 
     .container {
         padding-top: 50px;
@@ -65,7 +60,7 @@
         <div class="col-md-6 offset-md-3">
             <div class="registration-form" style="margin-bottom: 40px;">
                 <h2>Registration Form</h2>
-                <form method="post" action="" enctype="multipart/form-data">
+                <form method="post" enctype="multipart/form-data">
                     {% csrf_token %}
                     {{ error }}
                     <div class="form-group">
@@ -76,7 +71,7 @@
                         <label for="first_name">First Name:</label>
                         {{ form.first_name }}
                     </div>
-                    <div class "form-group">
+                    <div class="form-group">
                         <label for="last_name">Last Name:</label>
                         {{ form.last_name }}
                     </div>
@@ -87,6 +82,26 @@
                     <div class="form-group">
                         <label for="password">Password:</label>
                         {{ form.password }}
+                    </div>
+                    <div class="form-group">
+                        <label for="phone">phone:</label>
+                        {{ form.phone }}
+                    </div>
+                    <div class="form-group">
+                        <label for="country">country:</label>
+                        {{ form.country }}
+                    </div>
+                    <div class="form-group">
+                        <label for="city">city:</label>
+                        {{ form.city }}
+                    </div>
+                    <div class="form-group">
+                        <label for="">:</label>
+                        {{ form.date_of_birth }}
+                    </div>
+                    <div class="form-group">
+                        <label for="profile_pic">profile_pic:</label>
+                        {{ form.profile_pic }}
                     </div>
                     <div class="form-group">
                         <label for="confirm_password">Confirm Password:</label>
