--- a/user/templates/register.html
+++ b/user/templates/register.html
@@ -5,8 +5,7 @@
 
 {% block content %}
 <style>
-  
-
+ 
     .container {
         padding-top: 50px;
     }
@@ -62,8 +61,10 @@
                 <h2>Registration Form</h2>
                 <form method="post" enctype="multipart/form-data">
                     {% csrf_token %}
+                    <!-- {{ form.non_field_errors }} -->
+                    {{ form.as_p }}
                     {{ error }}
-                    <div class="form-group">
+                    <!-- <div class="form-group">
                         <label for="username">Username:</label>
                         {{ form.username }}
                     </div>
@@ -76,37 +77,37 @@
                         {{ form.last_name }}
                     </div>
                     <div class="form-group">
-                        <label for="email">Email:</label>
+                        <label for="email" >Email:</label>
                         {{ form.email }}
+                    </div>
+                    <div class="form-group">
+                        <label for="phone">Phone:</label>
+                        {{ form.phone }}
+                    </div>
+                    <div class="form-group">
+                        <label for="country">Country:</label>
+                        {{ form.country }}
+                    </div>
+                    <div class="form-group">
+                        <label for="city">City:</label>
+                        {{ form.city }}
+                    </div>
+                    <div class="form-group">
+                        <label for="date_of_birth">Date of birth:</label>
+                        {{ form.date_of_birth }}
+                    </div>
+                    <div class="form-group">
+                        <label for="profile_pic">Profile pic:</label>
+                        {{ form.profile_pic }}
                     </div>
                     <div class="form-group">
                         <label for="password">Password:</label>
                         {{ form.password }}
                     </div>
                     <div class="form-group">
-                        <label for="phone">phone:</label>
-                        {{ form.phone }}
-                    </div>
-                    <div class="form-group">
-                        <label for="country">country:</label>
-                        {{ form.country }}
-                    </div>
-                    <div class="form-group">
-                        <label for="city">city:</label>
-                        {{ form.city }}
-                    </div>
-                    <div class="form-group">
-                        <label for="">:</label>
-                        {{ form.date_of_birth }}
-                    </div>
-                    <div class="form-group">
-                        <label for="profile_pic">profile_pic:</label>
-                        {{ form.profile_pic }}
-                    </div>
-                    <div class="form-group">
                         <label for="confirm_password">Confirm Password:</label>
                         <input type="password" name="confirm_password" id="confirm_password">
-                    </div>
+                    </div> -->
                     <button class="btn btn-success">Register</button>
                 </form>
             </div>
