--- a/core/templates/partials/header.html
+++ b/core/templates/partials/header.html
@@ -97,7 +97,7 @@
                     <a class="nav-link" href="{% url 'index' %}">Home</a>
                   </li>
                   <li class="nav-item submenu dropdown">
-                    <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
+                    <a  href="{% url 'category' %}" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
                       aria-expanded="false">Shop</a>
                     <ul class="dropdown-menu">
                       <li class="nav-item">
